# CodingPal

./: .gitignore  README.md  build-android.bat  capacitor.config.ts  gradient-analysis.md  mobile.html  package-lock.json  package.json  tailwind.config.js  uno.config.ts  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/codingpal/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src/: App-mobile.vue  App.vue  main-mobile.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gesture_service.rs  lib.rs  main.rs
src-tauri/src/services/: database.rs  glm_api.rs  mod.rs  process_monitor.rs
src/components/: Toast.vue
src/pages/: ControlPanel.vue  ControlPanel.vue.backup  GesturePage.vue  HelpPage.vue  HistoryPage.vue  MainPage.vue  PromptHistory.vue  PromptOptimizer.vue  SettingsPage.vue
src/pages/mobile/: MobileGesture.vue  MobileHistory.vue  MobileHome.vue  MobileLayout.vue  MobileSettings.vue
src/router/: index.ts  mobile.ts
src/services/: api-client.ts  api-key-service.ts  concurrent-optimizer.ts  history-service.ts  multi-model-service.ts  storage.ts  toast.ts
src/stores/: app.ts
src/types/: gesture.ts  prompt-optimizer.ts
src/utils/: gestureRecognition.ts  windowManager.ts
